Updated the map in the filter page

--- a/views/doctorReviews.ejs
+++ b/views/doctorReviews.ejs
@@ -30,6 +30,6 @@
     <% } else { %>
         <p>No reviews available.</p>
     <% } %>
-    <a href="/doctor/profile/<%= doctor._id %>">Back to Profile</a>
+    <a href="/doctor/profile">Back to Profile</a>
 </body>
 </html>
