--- a/views/patientDoctors.ejs
+++ b/views/patientDoctors.ejs
@@ -33,9 +33,10 @@
         }
 
         #map {
-            height: 300px; 
-            width: 30%; 
-        }
+    width: 310px;
+    height: 100vh; 
+}
+
 
         #results-container {
             flex: 2;
@@ -151,45 +152,70 @@
         });
 
         function initMap() {
-        const map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 10, 
-            center: { lat: 20.5937, lng: 78.9629 } 
-        });
+    const map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 10,
+        center: { lat: 20.5937, lng: 78.9629 }
+    });
 
-        const doctors = <%- JSON.stringify(doctors) %>;
-        const uniqueLocations = <%- JSON.stringify(uniqueLocations) %>; 
+    const doctors = <%- JSON.stringify(doctors) %>;
+    const uniqueLocations = <%- JSON.stringify(uniqueLocations) %>;
 
-        const bounds = new google.maps.LatLngBounds();
+    const bounds = new google.maps.LatLngBounds();
 
-        uniqueLocations.forEach(location => {
-            const position = { lat: location.lat, lng: location.lng };
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(
+            (position) => {
+                const userLocation = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                };
 
-            const marker = new google.maps.Marker({
-                position: position,
-                map: map,
-                title: 'Free Time Slot Location'
-            });
+                const userMarker = new google.maps.Marker({
+                    position: userLocation,
+                    map: map,
+                    title: 'Your Location',
+                    icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png' 
+                });
 
-            const infoWindow = new google.maps.InfoWindow({
-                content: `Lat: ${location.lat}, Lng: ${location.lng}`
-            });
+                bounds.extend(userLocation);
 
-            marker.addListener('click', () => {
-                infoWindow.open(map, marker);
-            });
+                uniqueLocations.forEach(location => {
+                    const position = { lat: location.lat, lng: location.lng };
 
-            bounds.extend(position);
-        });
+                    const marker = new google.maps.Marker({
+                        position: position,
+                        map: map,
+                        title: 'Free Time Slot Location'
+                    });
 
-        map.fitBounds(bounds);
+                    const infoWindow = new google.maps.InfoWindow({
+                        content: `Lat: ${location.lat}, Lng: ${location.lng}`
+                    });
 
-        const maxZoomLevel = 10; 
-        map.addListener('bounds_changed', () => {
-            if (map.getZoom() > maxZoomLevel) {
-                map.setZoom(maxZoomLevel);
+                    marker.addListener('click', () => {
+                        infoWindow.open(map, marker);
+                    });
+
+                    bounds.extend(position);
+                });
+
+                map.fitBounds(bounds);
+
+                const maxZoomLevel = 10;
+                map.addListener('bounds_changed', () => {
+                    if (map.getZoom() > maxZoomLevel) {
+                        map.setZoom(maxZoomLevel);
+                    }
+                });
+            },
+            () => {
+                handleLocationError(true, map.getCenter());
             }
-        });
+        );
+    } else {
+        handleLocationError(false, map.getCenter());
     }
+}
 
 
 
